static/output.txt
  File "C:\Users\dlstj\gitrepo\2018DW//static//24.py", line 2
    
                ^
SyntaxError: unexpected EOF while parsing
